--- a/src/sass/mixin.scss
+++ b/src/sass/mixin.scss
@@ -1,7 +1,11 @@
 @mixin demonio {
     background-color: aquamarine;
-    width: 80px;
-    height: max-content;
+    border: 1px solid darkblue;
+    width: 150px;
+    text-align: center;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    color: black !important;
 }
 #section-one{
     @include demonio
